client/app/components/ui/RoomCard/RoomCard.module.scss
.card {
    width: 40rem;
    height: 11rem;
}

.room {
    height: 100%;
    padding: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1.6rem;
    font-weight: 600;
    color: var(--theme-color-primary);
    padding: 0 1rem;
}

.room__info {
    display: flex;
    align-items: center;
    gap: .5rem;
}

.room__info__user {
    color: var(--theme-color-link);
}

.room__controls {
    display: flex;
    align-items: center;
    gap: 2rem;
}

.tags {
    display: flex;
    gap: 1rem;
    margin: 0 1rem;
    overflow: hidden;
}

.tag {
    background-color: var(--theme-bg-tertiary);
    border-radius: .7rem;
    padding: .2rem .8rem;
    color: var(--theme-color-secondary);
    font-size: 1.2rem;
    font-weight: 600;
    cursor: pointer;
}

.line {
    width: 100%;
    height: .1rem;
    background-color: var(--theme-bg-room-line);
}

.dash {
    background-color: var(--theme-color-primary);
    width: 1rem;
    height: .1rem;
    display: inline-block;
}

